# capitoltrades

./: README.md
.github/workflows/: build.yml
.sqlx/: query-3dd3aa8c0a13160e99c35e89858a3018582baa412ea929bdaed081e47a0f29d1.json  query-605b203b44d8a6a5e4c8cf86670897e29b5ab14f495135294b731d8303a130fd.json  query-88ec7c81198aadd701ef320d5dc9d6959501e913d85a298b57f246418f13175a.json  query-9516df067d825b1273a6fe826a117227ad1a5c0399596e962aafc68600ea152d.json  query-9927ab495a1360a59b84c42d34ccbe348e659dae0337f2f448782a2f826c28d9.json  query-9d6aa288d5ac8f53d21abfb56e7781fabf481a877a4375b9651ee01a376f0f21.json  query-cc1e023c608278d6d511ca472045f8da20323cac325721675a5f279c63dc6f13.json  query-d0ae0803583459c47524bf7d36e415ff7671658fd1edf531156e76522b6ce3f5.json  query-e180357ae53101ec414ab87a34ae04d61ac0dac990961e3745e9f97ddd492e0d.json
crates/capitoltrades_api/src/: client.rs
crates/capitoltrades_api/src/types/: issuer.rs  meta.rs  mod.rs  politician.rs  trade.rs
crates/telegram_bot/: Cargo.toml  Makefile
crates/telegram_bot/migrations/: 20240329103744_init.sql
crates/telegram_bot/src/: bot.rs  lib.rs  notify.rs
crates/telegram_bot/src/endpoints/: actions.rs  issuers.rs  mod.rs  politicians.rs  trades.rs
crates/telegram_bot/src/markdown/: issuers.rs  politicians.rs  trades.rs
crates/telegram_bot/src/notifications/: notified_trades.rs
crates/telegram_bot/src/notifications/queries/: get_to_notify.sql  record_delivery.sql
crates/telegram_bot/src/tracking/: issuers.rs  politicians.rs
